<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/no_net_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/episode_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/no_net_tip_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_net_tip_title"
            android:textColor="@color/episode_definition_word"
            android:textSize="@dimen/dimen_font_60px" />

        <TextView
            android:id="@+id/not_connect_server_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_100px"
            android:gravity="center"
            android:text="@string/not_connect_server_tip"
            android:textColor="@color/episode_definition_title"
            android:textSize="@dimen/dimen_font_54px" />

        <TextView
            android:id="@+id/click_retry_tip_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_26px"
            android:gravity="center"
            android:text="@string/click_retry_button_tip"
            android:textColor="@color/episode_definition_title"
            android:textSize="@dimen/dimen_font_54px" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_100px"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/no_net_retry_btn"
                style="@style/play_error_tip_style"
                android:focusable="true"
                android:text="@string/error_retry" />

            <Button
                android:id="@+id/no_net_back_btn"
                style="@style/play_error_tip_style"
                android:layout_marginLeft="@dimen/dimen_60px"
                android:text="@string/error_back" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/loading"
        android:layout_width="@dimen/dimen_204px"
        android:layout_height="@dimen/dimen_204px"
        android:layout_centerInParent="true"
        android:background="@drawable/icon_loading_buffer"
        android:scaleType="center"
        android:visibility="gone" />

</RelativeLayout>